📝 Update README.md

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>A Digital Analog Clock</title>
-    <link rel="stylesheet" href="styles/style.css" type="text/css" media="all">
-    <script src="scripts/script.js" defer></script>
+    <link rel="stylesheet" href="stylesheets/index.css" type="text/css" media="all">
+    <script src="scripts/index.js" defer></script>
 </head>
 
 <body>
